syntax = "proto3";

package auth.v1;

option go_package = "erp.localhost/internal/infra/proto/auth/v1;authv1";

import "infra/v1/infra.proto";

// Authentication
message AuthenticateRequest {
    infra.v1.UserIdentifier identifier = 1;
    string user_password = 2;
    string user_hash = 3;
}

// Tokens
message Tokens {
    string access_token = 1;
    string refresh_token = 2;
}

message ExpiresIn {
    int64 access_token = 1;
    int64 refresh_token = 2;
}

message TokensResponse {
    Tokens tokens = 1;
    ExpiresIn expires_in = 2;
}

message VerifyTokenRequest {
    string access_token = 1;
}

message VerifyTokenResponse {
    bool valid = 1;
}

message RefreshTokenRequest {
    infra.v1.UserIdentifier identifier = 1;
    string refresh_token = 2;
}

message RevokeTokenRequest {
    infra.v1.UserIdentifier identifier = 1;
    string revoked_by = 2;
    Tokens tokens = 3;
}

message RevokeTokenResponse {
    bool revoked = 1;
}

service AuthService {
    // Authentication
    rpc Authenticate(AuthenticateRequest) returns (TokensResponse);

    // Access + Refresh Tokens
    rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (TokensResponse);
    rpc RevokeToken(RevokeTokenRequest) returns (RevokeTokenResponse);
}
